--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceso Denegado</title>
+    <title>Google SingIn</title>
 </head>
 <body>
-    <h1>Acceso Denegado</h1>
+
+    <h1>Google SingIn</h1>
+    <div id="g_id_onload"
+        data-client_id="780117283415-bsjjerresl2ve3o6ihk7qfdiu2abn9uc.apps.googleusercontent.com"
+        data-callback="handleCredentialResponse">
+    </div>
+
+    <div class="g_id_signin"
+        data-type="standard"
+        data-size="large"
+        data-theme="outline"
+        data-text="sign_in_with"
+        data-shape="rectangular"
+        data-logo_alignment="left">
+    </div>
+
+    <button id="google_signout">
+        SignOut
+    </button>
+
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script>
+        function handleCredentialResponse(response) {
+            
+            const body = { id_token: response.credential };
+
+            fetch('http://localhost:3000/api/auth/google', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'Application/json'
+                },
+                body: JSON.stringify( body )
+            })
+            .then( res =>  res.json() )
+            .then( res => {
+                console.log( res );
+                localStorage.setItem( 'email', res.user.email );
+            })
+            .catch( console.warn )
+        }
+
+        const btnSO = document.getElementById('google_signout');
+        btnSO.onclick = () => {
+            console.log( google.accounts.id );
+            google.accounts.id.disableAutoSelect();
+            google.accounts.id.revoke( localStorage.getItem('email'), done => {
+                localStorage.clear();
+                location.reload();
+            });
+        }
+    </script>
+
 </body>
 </html>
