--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,11 @@
             
             const body = { id_token: response.credential };
 
-            fetch('http://localhost:3000/api/auth/google', {
+            const url = ( window.location.hostname.includes('localhost') )
+                ? 'http://localhost:3000/api/auth/google'
+                : 'https://server-node-crdv.herokuapp.com/api/auth/google';
+
+            fetch( url , {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'Application/json'
